--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
+    "html-to-image": "^1.11.13",
+    "lucide-react": "^0.555.0",
+    "mongoose": "^9.0.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
